--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-body {
+* {
   box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+h4 {
+  font-family: sans-serif;
   margin: 0;
 }
 
@@ -8,5 +16,52 @@ header {
   padding: 40px;
 }
 
+header nav {
+}
+
 header nav a {
+}
+
+section.section-element {
+  margin: 0;
+  padding: 40px;
+}
+
+section.box-model-section {
+  background-color: #cff1ca;
+}
+
+.interior {
+  border: 10px solid #000;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 40px;
+  width: 100%;
+}
+
+.interior h1 {
+  color: #000;
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 1.5;
+  margin-bottom: 45px;
+}
+
+.interior h2 {
+  color: #000;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.interior p {
+  color: #000;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.box-model-interior {
+  background-color: #9ef490;
+  border-color: #187908;
 }
