--- a/style.css
+++ b/style.css
@@ -17,9 +17,26 @@ header {
 }
 
 header nav {
+  align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+header nav a:last-of-type {
+  margin-right: 0;
+}
+header nav a:first-of-type {
+  margin-left: 0;
 }
 
 header nav a {
+  color: #000;
+  font-size: 24px;
+  font-weight: 700;
+  margin: 0 15px;
+  padding: 5px;
+  text-decoration: none;
 }
 
 section.section-element {
@@ -40,7 +57,6 @@ section.box-model-section {
 }
 
 .interior h1 {
-  color: #000;
   font-size: 64px;
   font-weight: 700;
   line-height: 1.5;
@@ -48,20 +64,180 @@ section.box-model-section {
 }
 
 .interior h2 {
-  color: #000;
   font-size: 32px;
   font-weight: 400;
   line-height: 1;
 }
 
 .interior p {
-  color: #000;
   font-size: 32px;
   font-weight: 700;
   line-height: 1;
 }
 
+.flex-box-section {
+  background-color: #f1d3ca;
+}
+
 .box-model-interior {
   background-color: #9ef490;
   border-color: #187908;
+}
+
+.interior-flex {
+  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.interior-flex > div {
+  background-color: #ff9371;
+  border: 10px solid #7d260b;
+}
+
+.interior-flex--top {
+  flex-basis: 100%;
+  margin-bottom: 40px;
+  padding: 32px;
+}
+
+.interior-flex--top > div {
+  align-items: center;
+  background-color: #ffece5;
+  border: 5px solid #dd4414;
+  display: flex;
+  height: 170px;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 825px;
+  width: 100%;
+}
+
+.interior-flex--top > div > h1 {
+  margin: 0;
+}
+
+.interior-flex--horizontal,
+.interior-flex--vertical {
+  display: flex;
+  flex-basis: 48%;
+  height: 324px;
+  padding: 20px;
+}
+
+.interior-flex--horizontal > div,
+.interior-flex--vertical > div {
+  background-color: #ffece5;
+  border: 5px solid #dd4414;
+  flex-basis: 33%;
+}
+
+.interior-flex--horizontal > div {
+  margin-right: 20px;
+}
+
+.interior-flex--vertical > div {
+  margin-bottom: 20px;
+}
+
+.interior-flex--horizontal > div:last-of-type,
+.interior-flex--vertical > div:last-of-type {
+  margin: 0;
+}
+
+.interior-flex--vertical {
+  flex-direction: column;
+}
+
+.positioning-section {
+  background-color: #cad7f1;
+}
+
+.positioning-section .interior {
+  background-color: #84c4ff;
+  border-color: #0e3f9e;
+  height: 600px;
+  position: relative;
+}
+
+.circle,
+.square {
+  background-color: #4480f4;
+  border: 10px solid #0e3f9e;
+  height: 200px;
+  position: absolute;
+  width: 200px;
+}
+
+.circle {
+  border-radius: 50%;
+}
+
+.heading-section {
+  background-color: #f1caf0;
+  color: #6c0468;
+}
+
+.heading-section .interior {
+  border: none;
+}
+
+.heading-section h1,
+.heading-section h3 {
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 74px;
+  margin-bottom: 20px;
+}
+
+.heading-section h2 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46px;
+  margin-bottom: 40px;
+}
+
+.heading-section h4 {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 41px;
+  margin-top: 50px;
+}
+.heading-section p {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 23px;
+  margin-top: 40px;
+}
+
+.simple-javascript-section {
+  background-color: #faefd3;
+}
+
+.simple-javascript-section .interior {
+  border-color: #644904;
+  color: #644904;
+}
+
+.counter-button-wrapper {
+  align-items: center;
+  display: flex;
+}
+
+.counter-button-wrapper p {
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 74px;
+  margin: 0 40px 0 0;
+}
+
+footer {
+  background-color: #ffc3c3;
+  padding: 24px 48px;
+}
+
+footer p {
+  font-size: 24px;
+  font-weight: 700;
 }
