--- a/style.css
+++ b/style.css
@@ -237,7 +237,12 @@ footer {
   padding: 24px 48px;
 }
 
-footer p {
+footer .interior {
+  border: none;
+  padding: 0;
+}
+
+footer .interior p {
   font-size: 24px;
   font-weight: 700;
 }
